# StreamedAIBot

./: README.md
indopak/qwer/: pyproject.toml  yoyo.py
indopak/qwer/src/qwer/: __init__.py
